--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,7 @@ android.enableJetifier=false
 # Allow Gradle to use up to 1 GB of RAM
 org.gradle.jvmargs=-Xmx1024M
 
+# Set Java home to Java 17
+org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.16/libexec/openjdk.jdk/Contents/Home
+
 android.nonTransitiveRClass=false
