Fixes whatever the hell Manav's problem was.

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,6 @@ android.enableJetifier=false
 org.gradle.jvmargs=-Xmx1024M
 
 # Set Java home to Java 17
-org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.16/libexec/openjdk.jdk/Contents/Home
+#org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.16/libexec/openjdk.jdk/Contents/Home
 
 android.nonTransitiveRClass=false
